# python-yt-downloader-cli

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
src/youtube_downloader/: __init__.py  cli.py
tests/: __init__.py  conftest.py  stubs.py  test_cli.py
