[tool.poetry]
name = "python-yt-downloader-cli"
version = "0.1.0"
description = "The youtube downloader CLI Python project"
license = "MIT"
readme = "README.md"
keywords = ["youtube", "cli", "python", "poetry", "pyenv"]
homepage = "https://github.com/piotr-rzepa/python-yt-downloader-cli"
repository = "https://github.com/piotr-rzepa/python-yt-downloader-cli"
authors = ["Piotr Rzepkowski <piotr.rzepkowski98@gmail.com>"]
packages = [ { include = "src" } ]

[tool.poetry.scripts]
youtube-downloader = "youtube_downloader.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pytube = "^12.1.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
