[tool.poetry]
name = "python-yt-downloader-cli"
version = "2.0.0"
description = "The youtube downloader CLI Python project"
license = "MIT"
readme = "README.md"
keywords = ["youtube", "cli", "python", "poetry", "pyenv"]
homepage = "https://github.com/piotr-rzepa/python-yt-downloader-cli"
repository = "https://github.com/piotr-rzepa/python-yt-downloader-cli"
authors = ["Piotr Rzepkowski <piotr.rzepkowski98@gmail.com>"]
maintainers = ["Piotr Rzepkowski <piotr.rzepkowski98@gmail.com>"]
packages = [{ include = "youtube_downloader", from = "src" }]

[tool.poetry.scripts]
youtube-downloader = "src.youtube_downloader.cli:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src/youtube_downloader"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 90
precision = 2

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pytube = "^12.1.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4.1"}
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.1"
black = "^22.6.0"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.7.1"
flake8-import-order = "^0.18.1"
flake8-comprehensions = "^3.10.0"
flake8-docstrings = "^1.6.0"
flake8-spellcheck = "^0.28.0"
flake8-pytest-style = "^1.6.0"
flake8-pytest = "^1.3"
mypy = "^0.961"
flake8-annotations = "^2.9.0"
Sphinx = "^5.0.2"
darglint = "^1.8.1"

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "nox",
    "nox.sessions",
    "src.youtube_downloader",
    "mypy-nox.*",
    "pytest",
    "pytest_mock",
    "click",
    "click.testing",
    "pytube",
    "tqdm"
]
ignore_missing_imports = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
